--- a/index.html
+++ b/index.html
@@ -12,7 +12,10 @@
     <header>
         <nav class="container">
             <div class="contenitore">
-                <div class="logo">Logo</div>
+                <div class="logo">
+                    <img src="img/logo.svg" alt="logo">
+                    
+                </div>
                 <ul class="link">
                     <li> Link </li>
                     <li>Link</li>
@@ -27,6 +30,7 @@
     <main>
         <section>
             <div class="prima-sezione">
+                <img src="img/jumbo.png" alt="sfondo-section">
                 <div class="sezione-rettangolo">
                 </div>
             </div>
@@ -35,8 +39,8 @@
         <section class="section-with-col">
             <div class="seconda-sezione">
                 <div class="padre">
-                    <div class="sezione-sessanta"></div>
-                    <div class="sezione-quaranta"></div>
+                    <div class="col-sessanta"></div>
+                    <div class="col-quaranta"></div>
                 </div> 
             </div>
         </section>
@@ -44,8 +48,8 @@
         <section class="section-with-col section-col-reverse">
             <div class="terza-sezione">
                 <div class="padre">
-                    <div class="sezione-sessanta"></div>
-                    <div class="sezione-quaranta"></div>
+                    <div class="col-sessanta"></div>
+                    <div class="col-quaranta"></div>
                 </div> 
             </div>
         </section>
