--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
         <nav class="container">
             <div class="contenitore">
                 <div class="logo">
-                    <img src="img/logo.svg" alt="logo">
+                    <img src="/img/logo.svg" alt="logo">
                     
                 </div>
                 <ul class="link">
@@ -30,7 +30,6 @@
     <main>
         <section>
             <div class="prima-sezione">
-                <img src="img/jumbo.png" alt="sfondo-section">
                 <div class="sezione-rettangolo">
                 </div>
             </div>
