--- a/index.html
+++ b/index.html
@@ -13,15 +13,19 @@
         <nav class="container">
             <div class="contenitore">
                 <div class="logo">
-                    <img src="/img/logo.svg" alt="logo">
+                    <img src="../img/logo.svg" alt="logo">
                     
                 </div>
                 <ul class="link">
-                    <li> Link </li>
-                    <li>Link</li>
-                    <li>Link</li>
+                    <li> Sarica </li>
+                    <li>Perchè discord</li>
+                    <li>Nitro</li>
+                    <li>Sicurezza</li>
+                    <li>Assistenza</li>
                 </ul>
-                <div class="login">Login</div>
+                <div class="login">
+                    <button>Accedi</button>
+                </div>
             </div>
         </nav>
     </header>
@@ -31,6 +35,10 @@
         <section>
             <div class="prima-sezione">
                 <div class="sezione-rettangolo">
+                    <h1>Il tuo posto per parlare</h1>
+                    <p id="padding-top">che tu faccia parte Lorem ipsum dolor sit amet consectetur adipisicing elit. Labore dolor rerum, impedit, reiciendis enim veritatis quam recusandae nam quos laborum optio atque suscipit ipsa magni qui explicabo sed aliquam! Quibusdam.</p>
+                    <button class="button">Scarica per Mac</button>
+                    <button class="button">apri Discord nel tuo browser</button>
                 </div>
             </div>
         </section>
@@ -38,8 +46,11 @@
         <section class="section-with-col">
             <div class="seconda-sezione">
                 <div class="padre">
-                    <div class="col-sessanta"></div>
-                    <div class="col-quaranta"></div>
+                    <div id="sfondo1" class="col-sessanta"></div>
+                    <div class="col-quaranta">
+                        <h2>un luogo a invito con tutto lo spaio necessario per parlare</h2>
+                        <p>i serever discord sono Lorem ipsum dolor, sit amet consectetur adipisicing elit. Maxime recusandae ad aliquid, sint, sequi id perspiciatis, eos suscipit dolores quisquam explicabo ut molestias vitae voluptatibus! Ipsum voluptatem facere in fuga!</p>
+                    </div>
                 </div> 
             </div>
         </section>
@@ -47,8 +58,11 @@
         <section class="section-with-col section-col-reverse">
             <div class="terza-sezione">
                 <div class="padre">
-                    <div class="col-sessanta"></div>
-                    <div class="col-quaranta"></div>
+                    <div class="col-quaranta">
+                        <h2>Dove trovarsi è facile</h2>
+                        <p>mettiti comodo in un canale vocale quando hai tempo. gli amici nel tuo server possono vedere che sei li e unirsi instantaneamente senza dover chiamare.</p>
+                    </div>
+                    <div id="sfondo2" class="col-sessanta"></div>
                 </div> 
             </div>
         </section>
@@ -56,26 +70,84 @@
         <section class="section-with-col">
             <div class="seconda-sezione">
                 <div class="padre">
-                    <div class="col-sessanta"></div>
-                    <div class="col-quaranta"></div>
+                    <div id="sfondo3" class="col-sessanta"></div>
+                    <div class="col-quaranta">
+                        <h2>Da pochi a un fandom</h2>
+                        <p>dai inizio a una community di qualsiasi dimensione con strumenti di moderazione e accesso ai membri personalizzabile. concedi ai membri poteri speciali, crea canali privati, e molto altro</p>
+
+                    </div>
                 </div> 
             </div>
         </section>
 
         <section>
             <div class="qarta-sezione">
-                <div class="quadrato-100"></div>
+                <div class="quadrato-100">
+                    <h2>Tecnologia affidabile per tenersi in contatto</h2>
+                    <p>video ed audio a bassa latenza ti faranno sentire come se foste tutti nella stessa stanza, fai ciao in video, guarda gli amici giocare in streming, o riunitevi in una sessione di disegno con la condivisione Sschermo</p>
+                    <img src="../img/item4-big.svg" alt="quarta-sez">
+                    <h3>Pronto a iniziare la tua nuova avventura?</h3>
+                    <button>scarica per Mac</button>
+                </div>
             </div>
         </section>
 
         <section>
             <div class="ultima-sezione">
                 <div class="quad-col">
-                    <div class="colonna-doppia"></div>
-                    <div class="colonna-singola"></div>
-                    <div class="colonna-singola"></div>
-                    <div class="colonna-singola"></div>
-                    <div class="colonna-singola"></div>
+                    <div class="colonna-doppia">
+                       <h2>Il tuo posto per parlare</h2>
+                       <img src="../img/ita.png" alt="ita">
+                       <p>italiano</p><span></span>
+                        
+
+                    </div>
+                    <div class="colonna-singola">
+                        <h3>Prodotto</h3>
+                        <ul>
+                            <li>scarica</li>
+                            <li>Perche discord</li>
+                            <li>Nitro</li>
+                            <li>Sicurezza</li>
+                            <li>Assistenza</li>
+                        </ul>
+                    </div>
+                    <div class="colonna-singola">
+                        <h3>Compagnia</h3>
+                        <ul>
+                            <li>chi siamo</li>
+                            <li>Lavora con noi</li>
+                            <li>Marchio</li>
+                            <li>Redazione</li>
+                            <li>Negozio</li>
+                        </ul>
+                    </div>
+                    <div class="colonna-singola">
+                        <h3>Risorse</h3>
+                        <ul>
+                            <li>Scarica</li>
+                            <li>Perche discord</li>
+                            <li>Nitro</li>
+                            <li>Sicurezza</li>
+                            <li>Assistenza</li>
+                            <li>Scarica</li>
+                            <li>Perchè discord</li>
+                            <li>Nitro</li>
+                            <li>Sicurezza</li>
+                            <li>Assitenza</li>
+                            <li>Assitenza</li>
+                        </ul>
+                    </div>
+                    <div class="colonna-singola">
+                        <h3>Norme</h3>
+                        <ul>
+                            <li>Scarica</li>
+                            <li>perchè discord</li>
+                            <li>Nitro</li>
+                            <li>Sicurezza</li>
+                            <li>Assistenza</li>
+                        </ul>
+                    </div>
                 </div>
             </div>
         </section>
@@ -87,8 +159,8 @@
         <div class="footer">
             <div class="foot">
                 <ul class="link">
-                    <li id="log">logo</li>
-                    <li id="bott">bottone</li>
+                    <li id="log"><img src="../img/logo.svg" alt="logo"></li>
+                    <li id="bott"><button>Registrati</button></li>
                 </ul>
             </div>
         </div>
