--- a/index.html
+++ b/index.html
@@ -36,70 +36,69 @@
             <div class="prima-sezione">
                 <div class="sezione-rettangolo">
                     <h1>Il tuo posto per parlare</h1>
-                    <p id="padding-top">che tu faccia parte Lorem ipsum dolor sit amet consectetur adipisicing elit. Labore dolor rerum, impedit, reiciendis enim veritatis quam recusandae nam quos laborum optio atque suscipit ipsa magni qui explicabo sed aliquam! Quibusdam.</p>
+                    <p id="padding-top">che tu faccia parte di un club scolastico, gurppo di gamer, comunità artistica mondiale, o semplicemente di un piccolo gruppo di amici che vuole passare il tempo assieme, Discord rende più facile chiacchierare ogni giorno e ritrovarsi più spesso.</p>
                     <button class="button">Scarica per Mac</button>
                     <button class="button">apri Discord nel tuo browser</button>
                 </div>
             </div>
         </section>
 
-        <section class="section-with-col">
+        <section class="section section-with-col">
             <div class="seconda-sezione">
                 <div class="padre">
                     <div id="sfondo1" class="col-sessanta"></div>
                     <div class="col-quaranta">
-                        <h2>un luogo a invito con tutto lo spaio necessario per parlare</h2>
-                        <p>i serever discord sono Lorem ipsum dolor, sit amet consectetur adipisicing elit. Maxime recusandae ad aliquid, sint, sequi id perspiciatis, eos suscipit dolores quisquam explicabo ut molestias vitae voluptatibus! Ipsum voluptatem facere in fuga!</p>
+                        <h2>Un luogo a invito con tutto lo spazio necessario per parlare</h2>
+                        <p>i server Discord sono organizzati in canali tematici in cui puoi collaborare, condividere o semplicemente parlare della tua giornata senza intasare una chat di gruppo.</p>
                     </div>
                 </div> 
             </div>
         </section>
 
-        <section class="section-with-col section-col-reverse">
+        <section class="section section-with-col section-col-reverse">
             <div class="terza-sezione">
                 <div class="padre">
                     <div class="col-quaranta">
-                        <h2>Dove trovarsi è facile</h2>
-                        <p>mettiti comodo in un canale vocale quando hai tempo. gli amici nel tuo server possono vedere che sei li e unirsi instantaneamente senza dover chiamare.</p>
+                        <h2>Dove trovarsi é facile</h2>
+                        <p>Mettiti comodo in un canale vocale quando hai tempo. gli amici nel tuo server possono vedere che sei li e unirsi instantaneamente senza dover chiamare.</p>
                     </div>
                     <div id="sfondo2" class="col-sessanta"></div>
                 </div> 
             </div>
         </section>
 
-        <section class="section-with-col">
+        <section class="section section-with-col">
             <div class="seconda-sezione">
                 <div class="padre">
                     <div id="sfondo3" class="col-sessanta"></div>
                     <div class="col-quaranta">
                         <h2>Da pochi a un fandom</h2>
-                        <p>dai inizio a una community di qualsiasi dimensione con strumenti di moderazione e accesso ai membri personalizzabile. concedi ai membri poteri speciali, crea canali privati, e molto altro</p>
+                        <p>Dai inizio a una community di qualsiasi dimensione con strumenti di moderazione e accesso ai membri personalizzabile. concedi ai membri poteri speciali, crea canali privati, e molto altro.</p>
 
                     </div>
                 </div> 
             </div>
         </section>
 
-        <section>
+        <section class="section">
             <div class="qarta-sezione">
                 <div class="quadrato-100">
                     <h2>Tecnologia affidabile per tenersi in contatto</h2>
-                    <p>video ed audio a bassa latenza ti faranno sentire come se foste tutti nella stessa stanza, fai ciao in video, guarda gli amici giocare in streming, o riunitevi in una sessione di disegno con la condivisione Sschermo</p>
-                    <img src="../img/item4-big.svg" alt="quarta-sez">
-                    <h3>Pronto a iniziare la tua nuova avventura?</h3>
-                    <button>scarica per Mac</button>
+                    <p>Video ed audio a bassa latenza ti faranno sentire come se foste tutti nella stessa stanza, fai ciao in video, guarda gli amici giocare in streming, o riunitevi in una sessione di disegno con la condivisione schermo.</p>
+                    <img src="/img/item4-big.svg" alt="quarta-sez">
+                    <h2 id="sfondo--100">Pronto a iniziare la tua nuova avventura?</h2>
+                    <button>Scarica per Mac</button>
                 </div>
             </div>
         </section>
 
-        <section>
+        <section class="section">
             <div class="ultima-sezione">
                 <div class="quad-col">
                     <div class="colonna-doppia">
                        <h2>Il tuo posto per parlare</h2>
-                       <img src="../img/ita.png" alt="ita">
-                       <p>italiano</p><span></span>
-                        
+                       <span><img id="img_size" src="/img/ita.png" alt="ita">italiano &#9660</span>
+                                               
 
                     </div>
                     <div class="colonna-singola">
@@ -159,8 +158,12 @@
         <div class="footer">
             <div class="foot">
                 <ul class="link">
-                    <li id="log"><img src="../img/logo.svg" alt="logo"></li>
-                    <li id="bott"><button>Registrati</button></li>
+                    <li>
+                        <img src="/img/logo.svg" alt="logo">
+                    </li>
+                    <li>
+                        <button>Registrati</button>
+                    </li>
                 </ul>
             </div>
         </div>
