--- a/index.html
+++ b/index.html
@@ -85,7 +85,7 @@
                 <div class="quadrato-100">
                     <h2>Tecnologia affidabile per tenersi in contatto</h2>
                     <p>Video ed audio a bassa latenza ti faranno sentire come se foste tutti nella stessa stanza, fai ciao in video, guarda gli amici giocare in streming, o riunitevi in una sessione di disegno con la condivisione schermo.</p>
-                    <img src="/img/item4-big.svg" alt="quarta-sez">
+                    <img src="img/item4-big.svg" alt="quarta-sez">
                     <h2 id="sfondo--100">Pronto a iniziare la tua nuova avventura?</h2>
                     <button>Scarica per Mac</button>
                 </div>
@@ -97,7 +97,7 @@
                 <div class="quad-col">
                     <div class="colonna-doppia">
                        <h2>Il tuo posto per parlare</h2>
-                       <span><img id="img_size" src="/img/ita.png" alt="ita">italiano &#9660</span>
+                       <span><img id="img_size" src="img/ita.png" alt="ita">italiano &#9660</span>
                                                
 
                     </div>
@@ -159,7 +159,7 @@
             <div class="foot">
                 <ul class="link">
                     <li>
-                        <img src="/img/logo.svg" alt="logo">
+                        <img src="img/logo.svg" alt="logo">
                     </li>
                     <li>
                         <button>Registrati</button>
